--- a/_src/styles/2-variables/_global-variables.scss
+++ b/_src/styles/2-variables/_global-variables.scss
@@ -58,6 +58,7 @@
 
     @include mq(large) {
         --grid--columns: 4;
+        --grid--column-gap: var(--space--l);
     }
 
     // ---------------------------------------------------
