--- a/_src/styles/2-variables/_type-variables.scss
+++ b/_src/styles/2-variables/_type-variables.scss
@@ -11,15 +11,12 @@ $base-font-size: 16px;
     --type--font-size--base: $base-font-size;
     --type--font-size--small: #{rfs(14, 14.5)};
 
-    --type--1--font-family: 'system-ui', sans-serif;
+    --type--1--font-family: 'Titillium Web', sans-serif;
+    // --type--1--font-family: 'Lora', sans-serif;
     --type--1--font-weight: 400;
+    --type--1--font-weight--semi-bold: 600;
     --type--1--font-weight--bold: 700;
     --type--1--line-height: 1.5;
-
-    --type--2--font-family: 'Lora', serif;
-    --type--2--color: inherit;
-    --type--2--font-weight: 400;
-    --type--2--line-height: 1.3;
 
     --heading--margin-top: calc(var(--type--1--line-height) * 1em);
     --heading--margin-bottom: var(--space--base);
