--- a/_src/styles/3-pattern-mixins/_button-styles.scss
+++ b/_src/styles/3-pattern-mixins/_button-styles.scss
@@ -98,9 +98,19 @@
     &::after {
         position: absolute;
         top: 0;
+        right: calc(var(--space--xs) * -1);
         bottom: 0;
         margin: auto 0 auto var(--space--s);
         mask-image: url(#{asset-path('images/icons/arrow-right.svg')});
+        transition: transform var(--transition--duration);
+    }
+
+    @include interact {
+        &::after {
+            background: var(--accent--color);
+            transform: translateX(10px);
+            transition: transform var(--transition--duration);
+        }
     }
 }
 
