--- a/_src/components/page-header/styles-main.scss
+++ b/_src/components/page-header/styles-main.scss
@@ -1,14 +1,19 @@
 .page-header {
     --page-header--spacing: var(--space--s);
     --page-header--inset-image--size: #{rem(100)};
+    --page-header--inset-image--aspect-ratio: 530 / 290;
     --page-header--padding-top: var(--space--responsive--m);
     --page-header--padding-bottom: var(--space--responsive--xs);
     --page-header--heading--max-width: 17em;
-    --page-header--subheading--max-width: 40em;
-    --page-header--align: center;
-    --page-header--text-align: center;
-    --page-header--grid-alignment-x: center;
+    --page-header--subheading--max-width: 18em;
+    --page-header--align: left;
+    --page-header--text-align: left;
+    --page-header--grid-alignment-x: left;
     --page-header--overlay-opacity: 20%;
+    --page-header--padding-top: var(--space--xl);
+    --page-header--padding-bottom: var(--space--xl);
+    --page-header--box-width: #{rem(200)};
+    --page-header--box-height: #{rem(250)};
 
     $this: &;
     $internal-z-index: 100; // Local stacking.
@@ -19,7 +24,7 @@
     display: grid;
     align-items: center;
     justify-content: center;
-    grid-template-columns: var(--width--responsive--l);
+    grid-template-columns: var(--width--responsive--m);
     isolation: isolate; // Create local stacking context.
     justify-items: var(--page-header--grid-alignment-x);
 
@@ -37,10 +42,15 @@
         z-index: $internal-z-index; // Above background image.
         display: grid;
         flex-flow: column nowrap;
+        width: 100%;
         padding-top: var(--page-header--padding-top);
         padding-bottom: var(--page-header--padding-bottom);
         justify-items: var(--page-header--grid-alignment-x);
         text-align: var(--page-header--text-align);
+    }
+
+    &__content {
+        padding-top: var(--space--m);
     }
 
     &__heading {
@@ -53,6 +63,7 @@
 
     &__subheading {
         @include no-first-last-margin;
+        @include typestyle-h4;
 
         max-width: var(--page-header--subheading--max-width);
         margin-top: var(--page-header--spacing, var(--space--base));
@@ -107,17 +118,35 @@
         }
     }
 
+    &--inset-image {
+        #{$this}__inner {
+            @include mq(large) {
+                grid-template-columns: 1fr #{rem(534)};
+            }
+
+            &::after {
+                left: calc(var(--page-header--subheading--max-width) + var(--page-header--box-width) - var(--space--m));
+                height: var(--space--l);
+                opacity: 1;
+                background: var(--color--white);
+            }
+        }
+    }
+
     &__inset-image {
+        z-index: 1;
+        width: 100%;
         margin-bottom: var(--space--base);
+        margin-left: auto;
+
+        @include mq(large) {
+            order: 2;
+        }
 
         &-inner {
-            @include box-shadow;
-
-            width: var(--page-header--inset-image--size);
-            height: var(--page-header--inset-image--size);
-            margin-right: auto;
-            margin-left: auto;
-            border-radius: 999px;
+            // width: var(--page-header--inset-image--size);
+            // height: var(--page-header--inset-image--size);
+            aspect-ratio: var(--page-header--inset-image--aspect-ratio);
         }
     }
 
@@ -149,6 +178,55 @@
     &--type--article {
         #{$this}__heading {
             @include typestyle-h2;
+        }
+    }
+
+    &--no-image {
+        padding-top: var(--space--l);
+        padding-bottom: var(--space--l);
+
+        #{$this}__inner {
+            width: 100%;
+            padding-right: var(--space--m);
+            padding-left: var(--space--xl);
+            background: var(--page-header--background-color);
+
+            &::before {
+                --page-header--subheading--max-width: 25em;
+
+                top: 35%;
+                clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%, 20% 65%, 0 65%);
+            }
+
+        }
+    }
+
+    &__inner {
+        position: relative;
+
+        &::before {
+            @include typestyle-h4;
+
+            position: absolute;
+            top: 50%;
+            left: calc(var(--page-header--subheading--max-width) + var(--space--m));
+            width: var(--page-header--box-width);
+            height: var(--page-header--box-height);
+            background: var(--accent--color);
+            content: '';
+        }
+
+        &::after {
+            @include typestyle-h4;
+
+            position: absolute;
+            top: 75%;
+            left: calc(var(--page-header--subheading--max-width) + var(--page-header--box-width));
+            width: calc(var(--page-header--box-width) / 2);
+            height: calc(var(--page-header--box-height) / 2);
+            background: var(--accent--color);
+            opacity: 0.5;
+            content: '';
         }
     }
 }
