adds additional blocks and langauge swithcer

--- a/_src/components/site-header/styles/_header-menu.scss
+++ b/_src/components/site-header/styles/_header-menu.scss
@@ -10,7 +10,7 @@
     --submenu--padding-x: 0;
     --submenu--padding-y: var(--space--s);
     --submenu--box-shadow: var(--box-shadow--2);
-    --submenu--border-radius: var(--border-radius--m);
+    --submenu--border-radius: 0;
     --submenu--dropdown--max-width: #{rem(400)};
     --submenu--dropdown--min-width: #{rem(275)};
 
