--- a/_src/components/links/styles-main.scss
+++ b/_src/components/links/styles-main.scss
@@ -93,6 +93,8 @@
     }
 
     &.has-background {
+        --button--border-color: var(--color--foreground);
+
         #{$this}__inner {
             padding-top: var(--block--padding-y);
             padding-bottom: var(--block--padding-y);
