--- a/_src/components/page-header/styles-main.scss
+++ b/_src/components/page-header/styles-main.scss
@@ -229,4 +229,70 @@
             content: '';
         }
     }
+
+    &--home {
+        #{$this}__content {
+            padding: var(--space--m);
+            background: var(--color--yellow);
+            text-align: center;
+
+            @include mq(large) {
+                z-index: 1;
+                grid-column: 2 / 4;
+                grid-row: 2;
+                margin-top: -45%;
+            }
+        }
+
+        #{$this}__inner {
+            @include mq(large) {
+                --page-header--padding-top: 0;
+
+                grid-template-columns: 1.2fr 0.7fr 0.9fr 1fr;
+            }
+
+            &::before,
+            &::after {
+                content: none;
+            }
+        }
+
+        #{$this}__inset-image:not(.image-secondary) {
+            @include mq(large) {
+                --page-header--inset-image--aspect-ratio: 612 / 408;
+
+                grid-column: 1 / 3;
+                grid-row: 1;
+                transform: translateY(var(--space--xl));
+            }
+        }
+
+        #{$this}__inset-image.image-secondary {
+            @include mq(large) {
+                --page-header--inset-image--aspect-ratio: 578 / 365;
+
+                grid-column: 3 / 5;
+                grid-row: 1;
+            }
+        }
+
+        #{$this}__divider {
+            @include grid(1, 2);
+
+            width: 100%;
+
+            @include mq(large) {
+                grid-column: 1 / 5;
+                grid-row: 3;
+            }
+
+            .wp-block {
+                @include mq(large) {
+                    --divider--max-width: #{rem(350)};
+                }
+            }
+        }
+
+
+    }
 }
