--- a/_src/styles/3-pattern-mixins/_blockquote.scss
+++ b/_src/styles/3-pattern-mixins/_blockquote.scss
@@ -1,29 +1,48 @@
 @mixin blockquote {
     --blockquote--border-width: var(--border-width--s);
-    --blockquote--padding-left: var(--space--s);
+    --blockquote--padding: var(--space--s);
     --blockquote--border-offset: 0.5em;
     --block--margin-top: var(--space--responsive--m);
     --block--margin-bottom: var(--space--responsive--m);
     --block--max-width: var(--width--responsive--xs);
+    --block--icon--size: #{rem(70)};
 
     @include no-first-last-margin;
+    @include mask-icon();
 
     position: relative;
-    padding: 0;
-    padding-left: var(--blockquote--padding-left);
+    padding: var(--blockquote--padding);
+    padding-right: calc(var(--blockquote--padding) + var(--block--icon--size));
     border: 0;
 
     > :not(cite):not(.wp-block-quote__citation) {
         @include typestyle-h3;
     }
 
+    > * {
+        position: relative;
+        z-index: 2;
+    }
+
     &::before {
         position: absolute;
-        top: var(--blockquote--border-offset);
-        bottom: var(--blockquote--border-offset);
-        left: calc(var(--blockquote--border-width) * -1);
-        width: var(--blockquote--border-width);
-        background-color: var(--color--foreground);
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        background-color: var(--accent--color);
+        opacity: 0.5;
+        inset: 0;
         content: '';
+    }
+
+    &::after {
+        position: absolute;
+        z-index: 3;
+        mask-image: url(#{asset-path('images/icons/quote.svg')});
+        top: var(--blockquote--padding);
+        right: var(--blockquote--padding);
+        width: var(--block--icon--size);
+        height: var(--block--icon--size);
+        background: var(--accent--color);
     }
 }
