--- a/_src/components/team/styles.scss
+++ b/_src/components/team/styles.scss
@@ -49,6 +49,7 @@
         }
 
         &__job_title {
+            padding-right: calc(var(--team--media--size) + var(--space--xxs));
             margin-left: calc((var(--resellers--icon--size) + var(--space--xxs)) * -1);
             font-weight: var(--type--1--font-weight--semi-bold);
         }
