--- a/_src/styles/2-variables/_button-variables.scss
+++ b/_src/styles/2-variables/_button-variables.scss
@@ -7,13 +7,13 @@
     --button--border-width: var(--border-width--s);
     --button--border-radius: 0;
 
-    --button--background-color: var(--color--brand-2);
-    --button--border-color: var(--color--brand-2);
-    --button--color: var(--color--brand-1);
+    --button--background-color: var(--color--teal);
+    --button--border-color: var(--color--teal);
+    --button--color: var(--color--white);
 
-    --button--background-color--hover: var(--color--brand-1);
-    --button--border-color--hover: var(--color--brand-1);
-    --button--color--hover: #{foreground-color('brand-1')};
+    --button--background-color--hover: var(--color--seafoam);
+    --button--border-color--hover: var(--color--teal);
+    --button--color--hover: var(--color--grey);
 
     --button--gap: 0.5em;
 
