--- a/_src/components/benefits/styles-main.scss
+++ b/_src/components/benefits/styles-main.scss
@@ -63,5 +63,9 @@
 
     &__content {
         max-width: calc(100% - var(--benefits--icon--size) - var(--benefits--gap));
+
+        &-inner {
+            @include no-first-last-margin;
+        }
     }
 }
