--- a/_src/styles/2-variables/_global-variables.scss
+++ b/_src/styles/2-variables/_global-variables.scss
@@ -75,7 +75,7 @@
 
     --block--margin-top: var(--space--layout);
     --block--margin-bottom: var(--space--layout);
-    --block--padding-y: var(--space--responsive--l);
+    --block--padding-y: var(--space--responsive--m);
     --block--padding-x: var(--space--responsive--l);
     --block--max-width: var(--width--responsive--s);
 
