--- a/_src/styles/3-pattern-mixins/_button-styles.scss
+++ b/_src/styles/3-pattern-mixins/_button-styles.scss
@@ -94,6 +94,7 @@
     position: relative;
     font-weight: var(--type--1--font-weight--bold, inherit);
     padding-right: calc(var(--space--s) + var(--button--icon-size));
+    text-align: left;
 
     &::after {
         position: absolute;
